# ORIE-5782-Final-Project

./: .coverage  LICENSE  README.md  pyproject.toml
data/raw/: prices.csv
examples/: basic_usage.py
reports/: equal_weight_backtest.csv  inverse_ewma_vol_backtest.csv  inverse_realized_vol_backtest.csv  inverse_rf_forecast_vol_backtest.csv  inverse_rf_forecast_vol_log_backtest.csv  inverse_rf_forecast_vol_raw_backtest.csv  report.md  results.csv  rf_log_vol_forecasts.csv  rf_raw_vol_forecasts.csv  rf_vol_forecasts.csv
scripts/: run_pipeline.py
tests/: test_backtest_metrics.py  test_features.py  test_models.py  test_plotting.py  test_portfolio.py
volrisk/: __init__.py  backtest.py  cli.py  data.py  features.py  metrics.py  models.py  plotting.py  portfolio.py
volrisk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
